# e-commerce-website

./: ec_app.excalidraw
backend/: .gitignore  cloudbuild.yaml  dockerfile  pyproject.toml
backend/api/: create_tables.py  dependencies.py  main.py  settings.py
backend/api/cruds/: auth.py  cart.py  order.py  product.py
backend/api/models/: base_models.py  reqres_models.py  table_models.py
backend/api/routers/: auth.py  cart.py  order.py  product.py
backend/api/tests/: conftest.py  test_cart.py  test_debug.py  test_order.py  test_product.py
backend/mermeid/: er.mmd  mermaid_server.sh
frontend/: cloudbuild.yaml  dockerfile  package-lock.json  package.json  vite.config.ts
frontend/src/@types/: index.d.ts
frontend/src/lib/: constants.ts  logger.ts
frontend/src/lib/api/: index.ts
frontend/src/lib/components/: Modal.svelte  OrderTable.svelte  Pagination.svelte  ProductCard.svelte
frontend/src/lib/stores/: cartStatus.ts  loginStatus.ts
frontend/src/routes/: +layout.svelte
frontend/src/routes/[[page=integer]]/[[query]]/: +page.svelte
frontend/src/routes/cart/: +page.svelte
frontend/src/routes/login/: +page.svelte
frontend/src/routes/mypage/: +page.svelte
frontend/src/routes/orders/: +page.svelte
frontend/src/routes/products/[id]/: +page.svelte
frontend/src/routes/signup/: +page.svelte
